In Progress - Complete Layout for Purchase and Inventory

--- a/displaytabs/AccountingUI-MainTemplate.html
+++ b/displaytabs/AccountingUI-MainTemplate.html
@@ -7,137 +7,27 @@
         <div id="dynamikoMainContent" style="flex: 70%; padding-right: 10px; margin-left: 0px;" class="row">
             <div class="nav-tabs-custom" style="margin-top: 5px;">
                 <ul class="nav nav-tabs">
-                    <li class="tab-pane active">
+                    <li class="tab-pane active"> 
                         <a href="#Dashboard" data-toggle="tab" aria-expanded="true">Dashboard</a>
                     </li>
                     <li class="tab-pane">
-                        <a href="#Profile" data-toggle="tab" aria-expanded="false">Profile</a>
+                        <a href="#AccountChart" data-toggle="tab" aria-expanded="false">Account Chart</a>
                     </li>
                     <li class="tab-pane">
-                        <a href="#Attendance" data-toggle="tab" aria-expanded="false">Attendance</a>
+                        <a href="#PurchaseOrder" data-toggle="tab" aria-expanded="false">Purchase Order</a>
                     </li>
                     <li class="tab-pane">
-                        <a href="#Finance" data-toggle="tab" aria-expanded="false">Finance</a>
-                    </li>
-                    <li class="tab-pane">
-                        <a href="#Performance" data-toggle="tab" aria-expanded="false">Performance</a>
+                        <a href="#Payroll" data-toggle="tab" aria-expanded="false">Payroll</a>
                     </li>
                 </ul>
                 <div class="tab-content no-padding">
                     <div class="tab-pane active" id="Dashboard">
-                        <div style="display: flex; background: #ecf0f5;">
-                            <div style="flex: 30%; margin: 15px 0px;">
-                                <div class="DisplayTab" tabUrl="ToDoList"></div>
-                                <div class="DisplayTab" tabUrl="Stages"></div>
-                            </div>
-                            <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
-                                DISPLAYTAB-ACCOUNTINGUI-FORINTERVIEW
-                                DISPLAYTAB-ACCOUNTINGUI-FOROFFER
-                            </div>
-                            <div style="flex: 20%; margin: 15px 0px; margin-left: 15px;">
-                                DISPLAYTAB-ACCOUNTINGUI-NEWAPPLICANT
-                                DISPLAYTAB-ACCOUNTINGUI-NEWJOB
-                            </div>
-                        </div>
                     </div>
-                    <div class="tab-pane" id="Profile">
-                        <div style="display: flex; background: #ecf0f5;">
-                            <div style="flex: 80%; margin: 15px 0px;">
-                                <div style="display: flex; flex-direction: column;">
-                                    <div style="flex: 1;">
-                                        DISPLAYTAB-ACCOUNTINGUI-JOBINFO
-                                    </div>
-
-                                    <div style="flex: 1; display: flex; flex-direction: column;">
-                                        <div style="flex: 1;">
-                                            <div class="nav-tabs-custom" style="margin-top: 5px;">
-                                                <ul class="nav nav-tabs">
-                                                    <li class="tab-pane active">
-                                                        <a href="#TabMoreJobInfo" data-toggle="tab" aria-expanded="false">More Job Info</a>
-                                                    </li>
-                                                    <li class="tab-pane">
-                                                        <a href="#ActivitiesAndApplicants" data-toggle="tab" aria-expanded="true">Activities and Applicants</a>
-                                                    </li>
-                                                </ul>
-                                                <div class="tab-content no-padding">
-                                                    <div class="tab-pane active" id="TabMoreJobInfo">
-                                                        <div class="box box-warning myChildTab myAddInfo" module="HrRequisitionUI">
-                                                            <div class="box-header with-border">
-                                                                <h3 class="box-title">More Job Information</h3>
-                                                            </div>
-                                                            <div class="box-body displayTabHtml" module="HrRequisitionUI">
-                                                                <div style="flex: 1;">
-                                                                    DISPLAYTAB-ACCOUNTINGUI-INFO1
-                                                                </div>
-                                                                <div style="display: flex; flex: 1;">
-                                                                    <div style="flex: 33%">
-                                                                        DISPLAYTAB-ACCOUNTINGUI-JUSTIFICATION
-                                                                    </div>
-                                                                    <div style="flex: 33%; margin: 0px 10px;">
-                                                                        DISPLAYTAB-ACCOUNTINGUI-INTERNAL
-                                                                    </div>
-                                                                    <div style="flex: 33%">
-                                                                        DISPLAYTAB-ACCOUNTINGUI-EXTERNAL
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="tab-pane" id="ActivitiesAndApplicants">
-                                                        DISPLAYTAB-ACCOUNTINGUI-HRREQUISITIONAPPLICANTUI
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div style="flex: 20%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="box box-default">
-                                    <div class="box-header with-border">
-                                        <h3 class="box-title">Search Jobs</h3>
-                                    </div>
-                                    <div class="box-body">
-                                        <div class="myTeamRequisition" style="margin:5px; max-height: 500px; overflow-y: auto;">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="tab-pane" id="AccountChart">
                     </div>
-                    <div class="tab-pane" id="Attendance">
-                        <div style="display: flex; background: #ecf0f5;">
-                            <div style="flex: 30%; margin: 15px 0px;">
-                                DISPLAYTAB-ACCOUNTINGUI-APPLICANTPROFILE
-                                DISPLAYTAB-ACCOUNTINGUI-APPLICANTREFERENCE
-                            </div>
-                            <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
-                                DISPLAYTAB-ACCOUNTINGUI-APPLICANTEXPERIENCE
-                                DISPLAYTAB-ACCOUNTINGUI-APPLICANTINTERVIEWDETAIL
-                            </div>
-                            <div style="flex: 20%; margin: 15px 0px; margin-left: 15px;">
-                                DISPLAYTAB-ACCOUNTINGUI-SEARCHAPPLICANT
-                            </div>
-                        </div>
-
+                    <div class="tab-pane" id="PurchaseOrder">
                     </div>
-                    <div class="tab-pane" id="Finance">
-                        <div style="display: flex; background: #ecf0f5;">
-                            <div style="flex: 30%; margin: 15px 0px;">
-                                DISPLAYTAB-ACCOUNTINGUI-RECRUITERSANDMANAGERSPROFILE
-                                DISPLAYTAB-ACCOUNTINGUI-RECRUITERSANDMANAGERSREQUISITION
-                            </div>
-                            <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
-                                DISPLAYTAB-ACCOUNTINGUI-RECRUITERSANDMANAGERSINTERVIEWDETAIL
-                            </div>
-                            <div style="flex: 20%; margin: 15px 0px; margin-left: 15px;">
-                                DISPLAYTAB-ACCOUNTINGUI-SEARCHRECRUITERSANDMANAGERS
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="tab-pane" id="Performance">
-                        DISPLAYTAB-ACCOUNTINGUI-EMPLOYEEPERFORMANCEUI
+                    <div class="tab-pane" id="Payroll">
                     </div>
                 </div>
             </div>
