In Progress - Purchase Order 360

--- a/displaytabs/PurchaseOrderUI-MainTemplate.html
+++ b/displaytabs/PurchaseOrderUI-MainTemplate.html
@@ -11,18 +11,58 @@
                         <a href="#Dashboard" data-toggle="tab" aria-expanded="true">Dashboard</a>
                     </li>
                     <li class="tab-pane">
-                        <a href="#Stages" data-toggle="tab" aria-expanded="false">Stages</a>
+                        <a href="#Suppliers" data-toggle="tab" aria-expanded="false">Suppliers</a>
                     </li>
                     <li class="tab-pane">
-                        <a href="#Suppliers" data-toggle="tab" aria-expanded="false">Suppliers</a>
+                        <a href="#Products" data-toggle="tab" aria-expanded="false">Equipment and Materials</a>
                     </li>
                 </ul>
                 <div class="tab-content no-padding">
                     <div class="tab-pane active" id="Dashboard">
-                    </div>
-                    <div class="tab-pane" id="Stages">
+                        <div style="display: flex; background: #ecf0f5;">
+                            <div style="flex: 25%; margin: 15px 0px;">
+                                <div class="DisplayTab" tabUrl="RequestedItems"></div>
+                            </div>
+                            <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
+                                <div class="DisplayTab" tabUrl="ActivePurchaseOrder"></div>
+                            </div>
+                            <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
+                                <div class="DisplayTab" tabUrl="PurchaseOrderSearch"></div>
+                            </div>
+                        </div>
                     </div>
                     <div class="tab-pane" id="Suppliers">
+                        <div style="display: flex; background: #ecf0f5;">
+                            <div style="flex: 25%; margin: 15px 0px;">
+                                <div class="DisplayTab" tabUrl="SupplierDashboard"></div>
+                            </div>
+                            <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
+                                <div class="DisplayTab" tabUrl="SupplierProfile"></div>
+                            </div>
+                            <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
+                                <div class="DisplayTab" tabUrl="SupplierSearch"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane" id="Products">
+                        <div style="display: flex; background: #ecf0f5;">
+                            <div style="flex: 25%; margin: 15px 0px;">
+                                <div class="DisplayTab" tabUrl="ProductProfile"></div>
+                            </div>
+                            <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
+                                <div style="display: flex; flex-direction: column;">
+                                    <div style="flex: 1;">
+                                        <div class="DisplayTab" tabUrl="ActiveProductPO"></div>
+                                    </div>
+                                    <div style="flex: 1;">
+                                        <div class="DisplayTab" tabUrl="ProductLastHandler"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
+                                <div class="DisplayTab" tabUrl="ProductSearch"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
