--- a/displaytabs/tabs/AccountingUI/Header.html
+++ b/displaytabs/tabs/AccountingUI/Header.html
@@ -9,8 +9,8 @@
         <div class="info-box">
             <span class="info-box-icon bg-aqua"><i class="fa fa-fw fa-user"></i></span>
             <div class="info-box-content">
-                <span class="info-box-text">Candidates</span>
-                <span class="info-box-number HrRequisitionUI_CandidateCount">xxxxx</span>
+                <span class="info-box-text">Cash</span>
+                <span class="info-box-number HrRequisitionUI_CandidateCount">0</span>
             </div>
         </div>
     </div>
@@ -18,7 +18,7 @@
         <div class="info-box">
             <span class="info-box-icon bg-red"><i class="fa fa-fw fa-phone"></i></span>
             <div class="info-box-content">
-                <span class="info-box-text">For Interviews</span>
+                <span class="info-box-text">Receivables</span>
                 <span class="info-box-number HrRequisitionUI_TotalForInterview">0</span>
             </div>
         </div>
@@ -27,8 +27,8 @@
         <div class="info-box">
             <span class="info-box-icon bg-yellow"><i class="fa fa-fw fa-gear"></i></span>
             <div class="info-box-content">
-                <span class="info-box-text">Open Jobs</span>
-                <span class="info-box-number HrRequisitionUI_OpenJobsCount">xxxxxx</span>
+                <span class="info-box-text">Payables</span>
+                <span class="info-box-number HrRequisitionUI_OpenJobsCount">0</span>
             </div>
         </div>
     </div>
@@ -36,17 +36,8 @@
         <div class="info-box">
             <span class="info-box-icon bg-blue"><i class="fa fa-fw fa-calendar"></i></span>
             <div class="info-box-content">
-                <span class="info-box-text">Schedule This Week</span>
-                <span class="info-box-number HrRequisitionUI_ScheduleThisWeek">xxxxxxx</span>
-            </div>
-        </div>
-    </div>
-    <div style="flex: 1; margin: 0 15px;">
-        <div class="info-box">
-            <span class="info-box-icon bg-green"><i class="fa fa-fw fa-money"></i></span>
-            <div class="info-box-content">
-                <span class="info-box-text">For Offering</span>
-                <span class="info-box-number HrRequisitionUI_TotalForOffer">0</span>
+                <span class="info-box-text">Payroll</span>
+                <span class="info-box-number HrRequisitionUI_ScheduleThisWeek">0</span>
             </div>
         </div>
     </div>
