--- a/displaytabs/InventoryUI-MainTemplate.html
+++ b/displaytabs/InventoryUI-MainTemplate.html
@@ -11,6 +11,9 @@
                         <a href="#Dashboard" data-toggle="tab" aria-expanded="true">Dashboard</a>
                     </li>
                     <li class="tab-pane">
+                        <a href="#ActivePO" data-toggle="tab" aria-expanded="false">Active PO</a>
+                    </li>
+                    <li class="tab-pane">
                         <a href="#Equipment" data-toggle="tab" aria-expanded="false">Equipment</a>
                     </li>
                     <li class="tab-pane">
@@ -22,6 +25,8 @@
                 </ul>
                 <div class="tab-content no-padding">
                     <div class="tab-pane active" id="Dashboard">
+                    </div>
+                    <div class="tab-pane" id="ActivePO">
                     </div>
                     <div class="tab-pane" id="Equipment">
                     </div>
