In Progress - Fix Layout of AddInfo

--- a/displaytabs/tabs/HrRequisitionUI/External.html
+++ b/displaytabs/tabs/HrRequisitionUI/External.html
@@ -6,17 +6,17 @@
 
     <div class="box-body displayTabHtml" module="HrRequisitionUI">
         <form role="form-horizontal" module="HrRequisitionUI" submodule="HrRequisitionUI" addInfo="external" class="addInfo">
-            <div style="display: flex;">
-                <div style="flex: 33%">
+            <div style="display: flex; flex-wrap: wrap;">
+                <div style="flex: 88%">
                     <field module="HrRequisitionUI" editable="false" name="externalDescription" label="Description" type="TextAreaGen"></field>
                 </div>
-                <div style="flex: 33%">
+                <div style="flex: 88%">
                     <field module="HrRequisitionUI" editable="false" name="externalPrimaryResponsibilities" label="Primary Responsibilities" type="TextAreaGen"></field>
                 </div>
-                <div style="flex: 33%">
+                <div style="flex: 88%">
                     <field module="HrRequisitionUI" editable="false" name="externalQualifications" label="Qualifications" type="TextAreaGen"></field>
                 </div>
-                <div style="flex: 33%">
+                <div style="flex: 88%">
                     <field module="HrRequisitionUI" editable="false" name="externalPreferredQualifications" label="Preferred Qualifications" type="TextAreaGen"></field>
                 </div>
             </div>
