--- a/displaytabs/tabs/HrRequisitionUI/Info1.html
+++ b/displaytabs/tabs/HrRequisitionUI/Info1.html
@@ -7,7 +7,7 @@
     <div class="box-body displayTabHtml" module="HrRequisitionUI">
         <form role="form-horizontal" module="HrRequisitionUI" submodule="HrRequisitionUI" addInfo="Info1"
             class="addInfo"> 
-            <div style="display: flex;">
+            <div style="display: flex; flex-wrap: wrap;">
                 <div style="flex: 33%">
                     <field module="HrRequisitionUI" editable="false" name="divisionCode" label="Division" type="AutoCompleteGen"></field>
                 </div>
