--- a/displaytabs/tabs/HrRequisitionUI/Internal.html
+++ b/displaytabs/tabs/HrRequisitionUI/Internal.html
@@ -6,23 +6,23 @@
 
     <div class="box-body displayTabHtml" module="HrRequisitionUI">
         <form role="form-horizontal" module="HrRequisitionUI" submodule="HrRequisitionUI" addInfo="internal" class="addInfo">
-            <div style="display: flex;">
-                <div style="flex: 33%">
+            <div style="display: flex; flex-wrap: wrap;">
+                <div style="flex: 88%">
                     <field module="HrRequisitionUI" editable="false" name="coreSkills" label="Core Skills" type="TextFieldGen"></field>
                 </div>
-                <div style="flex: 33%">
+                <div style="flex: 88%">
                     <field module="HrRequisitionUI" editable="false" name="coreSkillCategory" label="Core Skill Category" type="SqlComboGen"></field>
                 </div>
-                <div style="flex: 33%">
+                <div style="flex: 88%">
                     <field module="HrRequisitionUI" editable="false" name="internalDescription" label="Description" type="TextAreaGen"></field>
                 </div>
-                <div style="flex: 33%">
+                <div style="flex: 88%">
                     <field module="HrRequisitionUI" editable="false" name="internalPrimaryResponsibilities" label="Primary Responsibilities" type="TextAreaGen"></field>
                 </div>
-                <div style="flex: 33%">
+                <div style="flex: 88%">
                     <field module="HrRequisitionUI" editable="false" name="internalQualifications" label="Qualifications" type="TextAreaGen"></field>
                 </div>
-                <div style="flex: 33%">
+                <div style="flex: 88%">
                     <field module="HrRequisitionUI" editable="false" name="internalPreferredQualifications" label="Preferred Qualifications" type="TextAreaGen"></field>
                 </div>
             </div>
