--- a/displaytabs/tabs/HrRequisitionUI/Justification.html
+++ b/displaytabs/tabs/HrRequisitionUI/Justification.html
@@ -5,17 +5,17 @@
     </div>
     <div class="box-body displayTabHtml" module="HrRequisitionUI">
         <form role="form-horizontal" module="HrRequisitionUI" submodule="HrRequisitionUI" addInfo="justification" class="addInfo">
-            <div style="display: flex;">
-                <div style="flex: 33%">
+            <div style="display: flex; flex-wrap: wrap;">
+                <div style="flex: 88%">
                     <field module="HrRequisitionUI" editable="false" name="replaceEmployeeId" label="Replacing Employee" type="AutoCompleteGen"></field>
                 </div>
-                <div style="flex: 33%">
+                <div style="flex: 88%">
                     <field module="HrRequisitionUI" editable="false" name="replaceEmployeeSalary" label="Replacing Employee Salary" type="DoubleGen"></field>
                 </div>
-                <div style="flex: 33%">
+                <div style="flex: 88%">
                     <field module="HrRequisitionUI" editable="false" name="positionJustificationTitle" label="Justification Title" type="TextFieldGen"></field>
                 </div>
-                <div style="flex: 33%">
+                <div style="flex: 88%">
                     <field module="HrRequisitionUI" editable="false" name="positionJustificationDescription" label="Justification Description" type="TextAreaGen"></field>
                 </div>
             </div>
