--- a/displaytabs/tabs/HrRequisitionUI/JobInfo.html
+++ b/displaytabs/tabs/HrRequisitionUI/JobInfo.html
@@ -6,7 +6,7 @@
 
     <div class="box-body displayTabHtml" module="HrRequisitionUI">
         <form role="form-horizontal" module="HrRequisitionUI" submodule="HrRequisitionUI" addInfo="JobInfo" class="addInfo">
-            <div style="display: flex;">
+            <div style="display: flex; flex-wrap: wrap;">
                 <div style="flex: 33%">
                     <field module="HrRequisitionUI" editable="false" name="requisitionTitle" label="Title" type="TextFieldGen"></field>
                 </div>
