--- a/displaytabs/tabs/EmployeeUI/PerformanceSearchEmployee.html
+++ b/displaytabs/tabs/EmployeeUI/PerformanceSearchEmployee.html
@@ -8,7 +8,10 @@
     </div>
     <div class="box-body">
         <div class="form-group">
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Search Employee">
+            <input type="text" class="form-control searchEmployeeFilter" module="EmployeeUI" tab="performance" placeholder="Search Employee">
         </div>
+    </div>
+
+    <div class="box-body searchEmployees" module="EmployeeUI" tab="performance" style="max-height: 500px; overflow-y: auto;">
     </div>
 </div>
