--- a/home.html
+++ b/home.html
@@ -362,9 +362,12 @@
   <script src="js/modules/UserUI.js"></script>
   <script src="js/modules/EmployeeUI.js"></script>
 
+  <script src="js/modules/submodules/PersonTaskUI.js"></script>
+
   <script src="js/saas/ReviewCenter.js"></script>
   
   <script src="js/main-initializer.js"></script>
+  <script src="js/global-events-others.js"></script>
   <script src="js/global-events-hr.js"></script>
   <script src="js/global-events.js"></script>
   <script src="js/mainJS.js"></script>
