In Progress - Employee TimeSheet

--- a/displaytabs/EmployeeUI-MainTemplate.html
+++ b/displaytabs/EmployeeUI-MainTemplate.html
@@ -30,9 +30,13 @@
 <!--DISPLAYTAB-EMPLOYEEUI-TRAINING-->
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
-                                <div style="display: flex; flex-direction: column;">
-                                    <div class="DisplayTab" tabUrl="TimeSheet"></div>
-                                    <div class="DisplayTab" tabUrl="TeamMember"></div>
+                                <div style="display: flex;">
+                                    <div style="flex: 40%">
+                                        <div class="DisplayTab" tabUrl="TimeSheet"></div>
+                                    </div>
+                                    <div style="flex: 60%; margin-left: 15px;">
+                                        <div class="DisplayTab" tabUrl="TeamMember"></div>
+                                    </div>
                                 </div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
