--- a/displaytabs/tabs/EmployeeUI/TeamMember.html
+++ b/displaytabs/tabs/EmployeeUI/TeamMember.html
@@ -2,7 +2,7 @@
 
 <div class="box box-default">
     <div class="box-header with-border">
-        <h3 class="box-title">Team Members</h3>
+        <h3 class="box-title">Team Members <small class="EmployeeTimeSheetUI_EmployeeName">Employee Name</small></h3>
     </div>
     <div class="box-body no-padding">
         <ul class="users-list clearfix">
