--- a/home.html
+++ b/home.html
@@ -363,6 +363,7 @@
   <script src="js/modules/EmployeeUI.js"></script>
 
   <script src="js/modules/submodules/PersonTaskUI.js"></script>
+  <script src="js/modules/submodules/EmployeeTimeSheetUI.js"></script>
 
   <script src="js/saas/ReviewCenter.js"></script>
   
