In Progress - Employee 360 Team Member

--- a/home.html
+++ b/home.html
@@ -364,6 +364,7 @@
 
   <script src="js/modules/submodules/PersonTaskUI.js"></script>
   <script src="js/modules/submodules/EmployeeTimeSheetUI.js"></script>
+  <script src="js/modules/submodules/EmployeeTeamMemberUI.js"></script>
 
   <script src="js/saas/ReviewCenter.js"></script>
   
