--- a/displaytabs/tabs/EmployeeUI/TeamMember.html
+++ b/displaytabs/tabs/EmployeeUI/TeamMember.html
@@ -2,50 +2,21 @@
 
 <div class="box box-default">
     <div class="box-header with-border">
-        <h3 class="box-title">Team Members <small class="EmployeeTimeSheetUI_EmployeeName">Employee Name</small></h3>
+        <h3 class="box-title">Team Members <small class="EmployeeTeamMemberUI_EmployeeName">Employee Name</small></h3>
+        <a href="#" class="pull-right employeeIdForTeamMember quickUpdaterTarget" callback="employeeTeamMemberUI.addTeamMember()" 
+            updater="autoComplete" module="EmployeeTeamMemberUI" fieldname="teamMemberCode">
+            <i class="fa fa-plus"></i>Add Member
+        </a>
     </div>
     <div class="box-body no-padding">
-        <ul class="users-list clearfix">
-            <li>
-                <img src="dist/img/user1-128x128.jpg" alt="User Image">
-                <a class="users-list-name" href="#">Alexander Pierce</a>
-                <span class="users-list-date">Today</span>
-            </li>
-            <li>
-                <img src="dist/img/user8-128x128.jpg" alt="User Image">
-                <a class="users-list-name" href="#">Norman</a>
-                <span class="users-list-date">Yesterday</span>
-            </li>
-            <li>
-                <img src="dist/img/user7-128x128.jpg" alt="User Image">
-                <a class="users-list-name" href="#">Jane</a>
-                <span class="users-list-date">12 Jan</span>
-            </li>
-            <li>
-                <img src="dist/img/user6-128x128.jpg" alt="User Image">
-                <a class="users-list-name" href="#">John</a>
-                <span class="users-list-date">12 Jan</span>
-            </li>
-            <li>
-                <img src="dist/img/user2-160x160.jpg" alt="User Image">
-                <a class="users-list-name" href="#">Alexander</a>
-                <span class="users-list-date">13 Jan</span>
-            </li>
-            <li>
-                <img src="dist/img/user5-128x128.jpg" alt="User Image">
-                <a class="users-list-name" href="#">Sarah</a>
-                <span class="users-list-date">14 Jan</span>
-            </li>
-            <li>
-                <img src="dist/img/user4-128x128.jpg" alt="User Image">
-                <a class="users-list-name" href="#">Nora</a>
-                <span class="users-list-date">15 Jan</span>
-            </li>
-            <li>
-                <img src="dist/img/user3-128x128.jpg" alt="User Image">
-                <a class="users-list-name" href="#">Nadia</a>
-                <span class="users-list-date">15 Jan</span>
-            </li>
+        <br/>
+        <div class="EmployeeTeamMemberUI_Supervisor" style="display: none;">
+            <img class="profile-user-img img-responsive img-circle EmployeeTeamMemberUI_SupervisorPic" src="dist/img/user4-128x128.jpg" alt="User profile picture">
+            <h3 class="profile-username text-center hand teamMemberSelect EmployeeTeamMemberUI_SupervisorName" module="EmployeeTeamMemberUI">--</h3>
+            <p class="text-muted text-center EmployeeTeamMemberUI_SupervisorDesignation">--</p>
+        </div>
+        
+        <ul class="users-list clearfix EmployeeTeamMemberUI_TeamMembers">
         </ul>
     </div>
 </div>
