In Progress - Inventory 360

--- a/displaytabs/InventoryUI-MainTemplate.html
+++ b/displaytabs/InventoryUI-MainTemplate.html
@@ -14,7 +14,7 @@
                         <a href="#ActivePO" data-toggle="tab" aria-expanded="false">Active PO</a>
                     </li>
                     <li class="tab-pane">
-                        <a href="#Equipment" data-toggle="tab" aria-expanded="false">Equipment</a>
+                        <a href="#EquipmentsMaterials" data-toggle="tab" aria-expanded="false">Equipments/Materials</a>
                     </li>
                     <li class="tab-pane">
                         <a href="#Location" data-toggle="tab" aria-expanded="false">Location</a>
@@ -28,7 +28,26 @@
                     </div>
                     <div class="tab-pane" id="ActivePO">
                     </div>
-                    <div class="tab-pane" id="Equipment">
+                    <div class="tab-pane" id="EquipmentsMaterials">
+                        <div style="display: flex; background: #ecf0f5;">
+                            <div style="flex: 25%; margin: 15px 0px;">
+                                <div class="DisplayTab" tabUrl="ToDoList"></div>
+                                <div class="DisplayTab" tabUrl="ActivePOForProduct"></div>
+                            </div>
+                            <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
+                                <div style="display: flex;">
+                                    <div style="flex: 40%">
+                                        <div class="DisplayTab" tabUrl="ProductProfile"></div>
+                                    </div>
+                                    <div style="flex: 60%; margin-left: 15px;">
+                                        <div class="DisplayTab" tabUrl="ProductAccountability"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
+                                <div class="DisplayTab" tabUrl="SearchProduct"></div>
+                            </div>
+                        </div>
                     </div>
                     <div class="tab-pane" id="Location">
                     </div>
