In Progress - DisplayTab module attribute

--- a/displaytabs/EmployeeUI-MainTemplate.html
+++ b/displaytabs/EmployeeUI-MainTemplate.html
@@ -24,10 +24,9 @@
                     <div class="tab-pane active" id="Dashboard">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 25%; margin: 15px 0px;">
-                                <div class="DisplayTab" tabUrl="ToDoList"></div>
+                                <div class="DisplayTab" module="PersonTaskUI" tabUrl="ToDoList"></div>
                                 <div class="DisplayTab" tabUrl="Leave"></div>
                                 <div class="DisplayTab" tabUrl="NewHires"></div>
-<!--DISPLAYTAB-EMPLOYEEUI-TRAINING-->
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
                                 <div style="display: flex;">
