--- a/displaytabs/HrRequisitionUI-MainTemplate.html
+++ b/displaytabs/HrRequisitionUI-MainTemplate.html
@@ -27,22 +27,16 @@
                     <div class="tab-pane active" id="Dashboard">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 30%; margin: 15px 0px;">
-                                <div class="DisplayTab" tabUrl="ToDoList"></div>
+                                <div class="DisplayTab" module="PersonTaskUI" tabUrl="ToDoList"></div>
                                 <div class="DisplayTab" tabUrl="Stages"></div>
-                                <!-- DISPLAYTAB-HRREQUISITIONUI-TODOLIST
-                                DISPLAYTAB-HRREQUISITIONUI-STAGES -->
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
                                 <div class="DisplayTab" tabUrl="ForInterview"></div>
                                 <div class="DisplayTab" tabUrl="ForOffer"></div>
-                                <!-- DISPLAYTAB-HRREQUISITIONUI-FORINTERVIEW
-                                DISPLAYTAB-HRREQUISITIONUI-FOROFFER -->
                             </div>
                             <div style="flex: 20%; margin: 15px 0px; margin-left: 15px;">
                                 <div class="DisplayTab" tabUrl="NewApplicant"></div>
                                 <div class="DisplayTab" tabUrl="NewJob"></div>
-                                <!-- DISPLAYTAB-HRREQUISITIONUI-NEWAPPLICANT
-                                DISPLAYTAB-HRREQUISITIONUI-NEWJOB -->
                             </div>
                         </div>
                     </div>
@@ -52,7 +46,6 @@
                                 <div style="display: flex; flex-direction: column;">
                                     <div style="flex: 1;">
                                         <div class="DisplayTab" tabUrl="JobInfo"></div>
-                                        <!-- DISPLAYTAB-HRREQUISITIONUI-JOBINFO -->
                                     </div>
 
                                     <div style="flex: 1; display: flex; flex-direction: column;">
@@ -75,20 +68,16 @@
                                                             <div class="box-body displayTabHtml" module="HrRequisitionUI">
                                                                 <div style="flex: 1;">
                                                                     <div class="DisplayTab" tabUrl="Info1"></div>
-                                                                    <!-- DISPLAYTAB-HRREQUISITIONUI-INFO1 -->
                                                                 </div>
                                                                 <div style="display: flex; flex: 1;">
                                                                     <div style="flex: 33%">
                                                                         <div class="DisplayTab" tabUrl="Justification"></div>
-                                                                        <!-- DISPLAYTAB-HRREQUISITIONUI-JUSTIFICATION -->
                                                                     </div>
                                                                     <div style="flex: 33%; margin: 0px 10px;">
                                                                         <div class="DisplayTab" tabUrl="Internal"></div>
-                                                                        <!-- DISPLAYTAB-HRREQUISITIONUI-INTERNAL -->
                                                                     </div>
                                                                     <div style="flex: 33%">
                                                                         <div class="DisplayTab" tabUrl="External"></div>
-                                                                        <!-- DISPLAYTAB-HRREQUISITIONUI-EXTERNAL -->
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -96,7 +85,6 @@
                                                     </div>
                                                     <div class="tab-pane" id="ActivitiesAndApplicants">
                                                         <div class="DisplayTab" tabUrl="ApplicantUI"></div>
-                                                        <!-- DISPLAYTAB-HRREQUISITIONUI-APPLICANTUI -->
                                                     </div>
                                                 </div>
                                             </div>
@@ -122,18 +110,13 @@
                             <div style="flex: 30%; margin: 15px 0px;">
                                 <div class="DisplayTab" tabUrl="ApplicantProfile"></div>
                                 <div class="DisplayTab" tabUrl="ApplicantReference"></div>
-                                <!-- DISPLAYTAB-HRREQUISITIONUI-APPLICANTPROFILE
-                                DISPLAYTAB-HRREQUISITIONUI-APPLICANTREFERENCE -->
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
                                 <div class="DisplayTab" tabUrl="ApplicantExperience"></div>
                                 <div class="DisplayTab" tabUrl="ApplicantInterviewDetail"></div>
-                                <!-- DISPLAYTAB-HRREQUISITIONUI-APPLICANTEXPERIENCE
-                                DISPLAYTAB-HRREQUISITIONUI-APPLICANTINTERVIEWDETAIL -->
                             </div>
                             <div style="flex: 20%; margin: 15px 0px; margin-left: 15px;">
                                 <div class="DisplayTab" tabUrl="SearchApplicant"></div>
-                                <!-- DISPLAYTAB-HRREQUISITIONUI-SEARCHAPPLICANT -->
                             </div>
                         </div>
                     </div>
@@ -142,22 +125,17 @@
                             <div style="flex: 30%; margin: 15px 0px;">
                                 <div class="DisplayTab" tabUrl="RecruitersAndManagersProfile"></div>
                                 <div class="DisplayTab" tabUrl="RecruitersAndManagersRequisition"></div>
-                                <!-- DISPLAYTAB-HRREQUISITIONUI-RECRUITERSANDMANAGERSPROFILE
-                                DISPLAYTAB-HRREQUISITIONUI-RECRUITERSANDMANAGERSREQUISITION -->
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
                                 <div class="DisplayTab" tabUrl="RecruitersAndManagersInterviewDetail"></div>
-                                <!-- DISPLAYTAB-HRREQUISITIONUI-RECRUITERSANDMANAGERSINTERVIEWDETAIL -->
                             </div>
                             <div style="flex: 20%; margin: 15px 0px; margin-left: 15px;">
                                 <div class="DisplayTab" tabUrl="SearchRecruitersAndManagers"></div>
-                                <!-- DISPLAYTAB-HRREQUISITIONUI-SEARCHRECRUITERSANDMANAGERS -->
                             </div>
                         </div>
                     </div>
                     <div class="tab-pane" id="Fulfilled">
                         <div class="DisplayTab" tabUrl="Fulfilled"></div>
-                        <!-- DISPLAYTAB-HRREQUISITIONUI-FULFILLED -->
                     </div>
                 </div>
             </div>
